--- a/calculadora.ui
+++ b/calculadora.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>transparent-calculator.png</normaloff>transparent-calculator.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(186, 165, 255, 255), stop:1 rgba(255, 255, 255, 255));</string>
   </property>
